<resources>
    <string name="app_name">Aplikasi Story</string>

    <string name="fragment_story">Story</string>
    <string name="fragment_maps">Peta</string>

    <!--Register-->
    <string name="signup">Daftar</string>
    <string name="signup_message">Belum punya akun? Yuk Daftar</string>
    <string name="error_format_email">Format email yang Anda masukan salah</string>
    <string name="error_length_password">Panjang password minimal 6 karakter</string>
    <string name="error_length_name">Panjang nama minimal 3 karakter</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="login_name_input_hint">Masukkan nama lengkap</string>
    <string name="login_email_input_hint">Masukkan email</string>
    <string name="login_password_input_hint">Masukkan password</string>

    <!--Login-->
    <string name="login">Masuk</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="copyright">© 2022 ShineDev</string>
    <string name="logout">Keluar</string>

    <!--Main Page-->
    <string name="localization_setting">Pengaturan Pelokalan</string>
    <string name="map_view">Peta</string>
    <string name="title_empty_data">Oops…!!! Data tidak tersedia.</string>
    <string name="desc_empty_data">Saat ini, sistem tidak dapat menyajikan data. Tenang, coba lagi beberapa saat lagi.</string>

    <!--Story-->
    <string name="add_story">Tambah Cerita</string>
    <string name="list_story">Daftar Cerita</string>
    <string name="detail_story">Detail Cerita</string>

    <!--Upload-->
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="text_upload_succeed">Story berhasil diunggah!</string>
    <string name="image_view">Gambar</string>
    <string name="image_preview">Gambar Story</string>
    <string name="uploaded_at">Diunggah pada %1$s</string>
    <string name="type_story_description">Tuliskan cerita kamu hari ini</string>

    <string name="title_collection_widget">Aplikasi Story</string>

    <string name="text_account_created">Akun berhasil dibuat, silahkan login</string>
    <string name="text_account_error">ada error nih</string>
    <string name="text_try_again">Coba Lagi</string>
    <string name="text_failed_take_photo">Gagal mengambil gambar.</string>
    <string name="text_failed_switch_camera">Gagal memunculkan kamera.</string>
    <string name="text_no_permission">Tidak mendapatkan permission.</string>
    <string name="choose_image">Pilih Gambar</string>

    // Map
    <string name="retry">Coba Lagi</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="current_location">Titik Lokasi</string>
    <string name="location_not_found">Location is not found. Try Again</string>

    <string name="map_story">Updated Story By Maps</string>
    <string name="empty_description">Deskripsi harus diisi.</string>
    <string name="mark_this_place">Tandai lokasi ini?</string>
    <string name="text_close">Tutup</string>
</resources>