<merge>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/snackbar_section"
	android:layout_width="match_parent"
	android:layout_height="46dp"
	android:background="@color/colorRedTransparent"
	app:layout_constraintBottom_toBottomOf="parent"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintStart_toStartOf="parent">

	<TextView
		android:id="@+id/tv_snackbar_warning"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:padding="@dimen/space_small"
		android:textAlignment="center"
		android:textColor="@color/colorLightRed"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/iv_snackbar_warning_close"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="@tools:sample/lorem" />

	<ImageView
		android:id="@+id/iv_snackbar_warning_close"
		android:layout_width="wrap_content"
		android:layout_height="46dp"
		android:layout_alignParentEnd="true"
		android:layout_centerVertical="true"
		android:clickable="true"
		android:contentDescription="@string/text_close"
		android:focusable="true"
		android:paddingHorizontal="@dimen/space_medium"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/tv_snackbar_warning"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_close_red" />
</androidx.constraintlayout.widget.ConstraintLayout>
</merge>